--- a/packages/cli/generators/project/templates/package.json.ejs
+++ b/packages/cli/generators/project/templates/package.json.ejs
@@ -45,9 +45,9 @@
     "posttest": "npm run lint",
 <% } -%>
 <% if (project.mocha && (project.prettier || project.tslint)) { -%>
-    "test:dev": "lb-mocha DIST/test/**/*.js && npm run lint",
+    "test:dev": "lb-mocha --allow-console-logs DIST/test/**/*.js && npm run posttest",
 <% } else if (project.mocha) { -%>
-    "test:dev": "lb-mocha DIST/test/**/*.js",
+    "test:dev": "lb-mocha --allow-console-logs DIST/test/**/*.js",
 <% } -%>
 <% if (project.projectType === 'application') { -%>
     "prestart": "npm run build:current",
